--- a/signup/templates/signup.html
+++ b/signup/templates/signup.html
@@ -7,6 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <style>
+        .bor{
+            color: red;
+            border-width:2px ;
+            border-color: blueviolet;
+            border-style: solid;
+            margin: 2px;
+
+        }
+    </style>
+
 </head>
 
 <body class="bd">
@@ -30,12 +41,13 @@
                 <label for="password">confirm password</label>
                 <input type="password" placeholder="confirm password">
                 <br><br>
+                <input type="submit"> &nbsp; <input type="reset">
         </div>
 
         </form>
     </center>
     <br>
-
+    
 
 
 
