--- a/signup/templates/sample.html
+++ b/signup/templates/sample.html
@@ -1,19 +1,25 @@
 {% load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    
-</head>
-<body>
-<h1 class="hh">hiii</h1>
-<h2 class="bo">border</h2>
-<h1 class="ma">margin</h1>
-<h1 class="pp">heloo</h1>
 
-    
+</head>
+
+<body>
+    <h1 class="hh">hiii</h1>
+    <h2 class="bo">border</h2>
+    <h1 class="ma">margin</h1>
+    <h1 class="pp">heloo</h1>
+    <br>
+    <img src="{%static 'images/logo.jpeg' %}" alt="">
+
+
+
 </body>
+
 </html>
