--- a/signup/templates/signup.html
+++ b/signup/templates/signup.html
@@ -14,21 +14,26 @@
 </head>
 
 <body class="bd">
+   
     <center>
-        
+
         <BR></BR><BR></BR><BR></BR><BR></BR>
         <div class="div1">
             <h3><u> sign up</h3></u>
 
             <form action="">
 
-                <label for="name">name </label>
+                <label for="name">name </label> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;
+                <nbsp></nbsp>
+                <nbsp></nbsp>
+                <nbsp></nbsp>
+                <nbsp></nbsp>
                 <input type="name" placeholder="enter your name ">
                 <br> <br>
-                <label for="phone number">phone number </label>
+                <label for="phone number">phone number </label> &nbsp; &nbsp;&nbsp;&nbsp;
                 <input type="number" placeholder="enter your number" maxlength="10">
                 <br><br>
-                <label for="password">new password</label>
+                <label for="password">new password</label> &nbsp; &nbsp;&nbsp;&nbsp;
                 <input type="password" placeholder="enter your password">
                 <br><br>
                 <label for="password">confirm password</label>
