--- a/signup/templates/sample.html
+++ b/signup/templates/sample.html
@@ -16,7 +16,8 @@
     <h1 class="ma">margin</h1>
     <h1 class="pp">heloo</h1>
     <br>
-    <img src="{%static 'images/logo.jpeg' %}" alt="">
+    <img src="{%static 'images/logo.jpeg' %}" alt=""> <br><br><br>
+   
 
 
 
