--- a/signup/templates/signup.html
+++ b/signup/templates/signup.html
@@ -16,6 +16,7 @@
 <body class="bd">
    
     <center>
+        <h1 class="heading">F R E S H   M A R T <br> <h3 class="bh">SUPER MARKET</h3> 
 
         <BR></BR><BR></BR><BR></BR><BR></BR>
         <div class="div1">
