--- a/signup/static/css/style.css
+++ b/signup/static/css/style.css
@@ -65,5 +65,6 @@ img[alt="logo"]{
 .bh{
     font-family: sans-serif;
     padding-right: 10px;
-    padding-top: ;
+    padding-top: -20px;
+    
 }
