--- a/signup/templates/signup.html
+++ b/signup/templates/signup.html
@@ -16,9 +16,9 @@
 <body class="bd">
    
     <center>
-        <h1 class="heading">F R E S H   M A R T <br> <h3 class="bh">SUPER MARKET</h3> 
+        <h1 class="heading">F R E S H  &nbsp; M A R T <h3 class="bh">SUPER MARKET</h3> 
 
-        <BR></BR><BR></BR><BR></BR><BR></BR>
+        <BR></BR><BR></BR><BR>
         <div class="div1">
             <h3><u> sign up</h3></u>
 
