--- a/signup/templates/sample.html
+++ b/signup/templates/sample.html
@@ -17,7 +17,16 @@
     <h1 class="pp">heloo</h1>
     <br>
     <img src="{%static 'images/logo.jpeg' %}" alt=""> <br><br><br>
-   
+    <div class="div2">
+       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi ut expedita rem aspernatur laboriosam dignissimos. Placeat, commodi veritatis ipsam nihil neque consectetur explicabo! Et tenetur tempora quo recusandae itaque eligendi.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi dicta et sunt voluptatibus adipisci saepe, placeat non? Molestias aut, alias doloribus magni excepturi soluta ea provident laboriosam id sint omnis?
+    <h1 align="center" size="20">shabeeb</h1>
+    </div>
+   <h2 class="shab">
+       shabeeb
+   </h2>
+   <br>
+   <h2 class="tk">tkkkk</h2>
 
 
 
