--- a/signup/templates/sample.html
+++ b/signup/templates/sample.html
@@ -27,6 +27,16 @@
    </h2>
    <br>
    <h2 class="tk">tkkkk</h2>
+   <br><br><br>
+   <div class="box">
+       
+         <div class="box1"> </div>
+         <div class="box2"></div>
+         <div class="box3"></div>
+
+
+
+   </div>
 
 
 
