--- a/signup/templates/signup.html
+++ b/signup/templates/signup.html
@@ -42,6 +42,9 @@
                 <br><br>
                 <input type="submit"> &nbsp; <input type="reset">
                 <br>
+                <p style="color: black;">already have an account?  <a href="{% url 'signin' %}" class="link">signin</a> </p>
+                <br>
+                 
 
         </div>
 
