--- a/signup/templates/signin.html
+++ b/signup/templates/signin.html
@@ -27,7 +27,7 @@
                 <br><br>
                 <input type="submit"> 
                 <br>
-                <p>don't have an account? <a href="signup">signup</a></p>
+                <p style="color: black;">don't have an account? <a href="signup">signup</a></p>
                 
 
         </div>
