--- a/signup/templates/signin.html
+++ b/signup/templates/signin.html
@@ -13,7 +13,7 @@
         <h1 class="heading">F R E S H  &nbsp; M A R T <h3 class="bh">SUPER MARKET</h3> 
 
         <BR></BR><BR></BR><BR>
-        <div class="indiv">
+        <div class="indiv" style="background-color: white;">
             <h3><u> sign in</h3></u>
 
             <form action="">
