--- a/signup/templates/sample.html
+++ b/signup/templates/sample.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    
 
 </head>
 
-<body>
-    <h1 class="hh">hiii</h1>
+<body style="background-color: white;">
+    <!-- <h1 class="hh">hiii</h1>
     <h2 class="bo">border</h2>
     <h1 class="ma">margin</h1>
     <h1 class="pp">heloo</h1>
@@ -32,11 +33,52 @@
        
          <div class="box1"> </div>
          <div class="box2"></div>
-         <div class="box3"></div>
+         <div class="box3"></div> -->
 
 
 
-   </div>
+   <!-- </div>
+   <br><br><br>
+   <div class="grid">
+       <div class="gr1">A</div>
+       <div class="gr2">B</div>
+       <div class="gr3">C</div>
+       <!-- <div class="gr4">D</div> -->
+   <!-- </div> --> 
+
+   <button>
+    <button type="button" class="btn btn-warning">Warning</button>
+   </button>
+   <br>
+   <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>shabeeb</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td colspan="2">Larry the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
 
 
 
