--- a/signup/static/css/style.css
+++ b/signup/static/css/style.css
@@ -181,3 +181,416 @@ img[alt="logo"]{
 /* .gr4{
     background-color: black;
 } */
+
+.mainbox{
+    background-color: cyan;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    padding-top: 50px;
+    
+    
+}
+.a1{
+    background-color: black;
+    width: 400px;
+    position: relative;
+    left: 10px;
+    background-image:url('../images/hhh.jpg');
+    background-size: cover;
+
+    
+
+}
+.a2{
+    /* background-color:blue ; */
+    width: 400px;
+    background-image:url('../images/R.jpg');
+    background-size: cover;
+    border-radius: 15px;
+
+}
+.a3{
+    background-color: brown;
+    width: 400px;
+    background-image:url('../images/sample\ \(1\).jpg');
+
+}
+.a4{
+    background-color: chartreuse;
+    width: 400px;
+    position: relative;
+    left: 10px;
+    position: relative;
+    top: 10px;
+
+}
+.a5{
+    background-color: darkcyan;
+    width: 400px;
+    position: relative;
+    top: 10px;
+
+}
+.a6{
+    background-color: darkred;
+    width: 400px;
+    position: relative;
+    top: 10px;
+
+}
+.bgsample{
+    background-image:url('../images/home.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.hmsignup{
+    color: white;
+}
+.hmsignin{
+    color: white;
+}
+
+.divsample2{
+    width: 300px;
+    height: 300px;
+    
+}
+.d1,.d2,.d3{
+    background-color: green;
+    height: 100px;
+    width: 100px;
+}
+.hhh1{
+    color: blue;
+}
+
+
+
+
+/* machine test */
+
+
+.homelogoimage{
+    height: 120px;
+    width: 120px;
+}
+
+.mainbar{
+    height: 80px;
+    
+}
+
+.logoimg{
+    height: 80px;
+    width: 250px;
+}
+
+.homebutton{
+    position: relative;
+    left: 300px;
+    bottom: 22px;
+}
+
+.aboutbutton{
+    position: relative;
+    left: 390px;
+    bottom: 50px;
+}
+
+.contactbutton{
+    position: relative;
+    left: 500px;
+    bottom: 75px;
+}
+
+.imgbar{
+    height: 300px;
+    
+}
+
+.codingkid{
+    height: 280px;
+    width: 500px;
+    position: relative;
+    left: 400px;
+    top: 25px;
+}
+
+.catogoriesdiv{
+    width: 100%;
+    height: 200px;
+    background-color: aqua;
+}
+
+.maindivimages{
+    width: 100%;
+    height: 200px;
+    /* background-color: aqua; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 5px;
+    
+}
+.jr,.ai,.gd,.dw,.lc{
+    width: 270px;
+    height: 200px;
+}
+
+.Cybersquare1{
+    height: 70px;
+}
+
+.h55{
+    position: relative;
+    left: 1170px;
+}
+
+.h54{
+    position: relative;
+    left: 875px;
+    top: 32px;
+}
+
+.h53{
+    position: relative;
+    left: 600px;
+    top: 67px;
+}
+
+.h52{
+    position: relative;
+    left: 327px;
+    top: 100px;
+}
+.h51{
+    position: relative;
+    left: 30px;
+    top: 132px;
+}
+
+.mainndiv{
+    position: relative;
+    bottom: 50px;
+}
+
+.whoweare{
+    position: relative;
+    top: 15px;
+}
+.contactdiv{
+    position: relative;
+    left: 400px;
+    top: 150px;
+}
+
+.contact111{
+    height: 250px;
+    width: 250px;
+    position: relative;
+    left: 680px;
+    bottom: 100px;
+}
+
+
+
+/* main project */
+
+.mainnavbar{
+    height: 67px;
+}
+
+.mainlogo{
+    height: 75px;
+    width: 140px;
+}
+
+.locationlogo{
+    height: 30px;
+    width: 30px;
+    position: relative;
+    left: 20px;
+}
+.locationtext{
+    position: relative;
+    left: 195px;
+    bottom: 48px;
+}
+
+.searchbar{
+    position: relative;
+    left: 600px;
+    bottom: 100px;
+    
+}
+
+/* .{
+    position: relative;
+    left: 40px;
+} */
+
+/* .categoriesbtn{
+    position: relative;
+    left: 300px;
+    bottom: 100px;
+} */
+
+
+
+/* facebook */
+
+.fb-container {
+    height: 60px;
+}  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* sign up form */
+
+:root{
+    --succes-color: #2ecc71;;
+    --error-color: #e74c3c;
+}
+.container{
+    background-color: #fff;
+    border-radius: 5px;
+    border-color: black;
+    /* box-shadow: 0 2px 10px rgba(0,0,0,0.3); */
+    width: 400px;
+    margin: 10px auto;
+}
+h2{
+    text-align: center;
+    margin: 0 0 20px;
+}
+.form{
+    padding: 30px 40px;
+}
+.form-control{
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+    position: relative;
+}
+.form-control label{
+    color:#777;
+    display: block;
+    margin-bottom: 5px; 
+}
+.form-control input{
+    border: 2px solid #f0f0f0;
+    border-radius: 4px;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    font-size: 14px;   
+}
+.form-control input:focus{
+    outline: 0;
+    border-color: #777;
+
+}
+.form-control.success input {
+    border-color: var(--succes-color);
+}
+.form-control.error input {
+    border-color: var(--error-color);    
+}
+.form-control small{
+    color: var(--error-color);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+}
+.form-control.error small{
+    visibility: visible;
+}
+.form button {
+    cursor: pointer;
+    background-color: #3498db;
+    border: 2px solid #3498db;
+    border-radius: 4px;
+    color: #fff;
+    display: block;
+    padding: 10px;
+    font-size: 16px;
+    margin-top:20px;
+    width:100%;
+}
+
+
+.div99{
+    text-align: center;
+    position: relative;
+    padding-top: 10px;
+    
+}
+
+.im1,.im2{
+    height: 300px;
+    width: 450px;
+}
+
+.li{
+    list-style: none;
+}
+
+
+
+/* navbar */
+
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
+
+// Colors
+$navbar-white: #fafafa;
+$navbar-black: #131313;
+$navbar-active-color: #fafafa;
+$navbar-bg-active-color: #ff9900;
+$bg-light-blue: #00c6ff;
+$bg-dark-blue: #0072ff;
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100vh;
+}
+body {
+  font-family: "Open Sans", sans-serif;
+  background: white;
+}
+.jumbo {
+  padding-top: 100px;
+  min-height: 200vh;
+}
+
+// On Shrink
+.shrink {
+  .navbar {
+    color: $navbar-white;
+    background: $bg-light-blue;
+    background: -webkit-linear-gradient(55deg,$bg-light-blue 10%,$bg-dark-blue 90%);
+    background: linear-gradient(35deg,$bg-light-blue 10%,$bg-dark-blue 90%);
+  }
+}
