--- a/signup/templates/main_project/home.html
+++ b/signup/templates/main_project/home.html
@@ -15,23 +15,22 @@
 
   <!-- navbar -->
 
-  <div class="navbar1 container-fluid bg-warning row"> 
+  <div class="navbar1 container-fluid bg-warning row fixed-top"> 
     <div class="col-lg-2">
       <img class="logo" src="./static/images/mainlogo1.png" alt="">
     </div>
-    <div class="elements col-lg-6 p-4">
+    <div class="elements col-lg-7 p-4">
       <a class="text-black text-decoration-none" href="">HOME</a> &nbsp; &nbsp;
       <a class="text-black text-decoration-none" href="">CATOGORIES</a> &nbsp; &nbsp;
-      <a class="text-black text-decoration-none" href="">CONTACT US</a> 
+      <a class="text-black text-decoration-none" href="#footer">CONTACT</a>
+      <a class="join_us text-black text-decoration-none" href="signup">JOIN US</a>
     </div>
      <div class="col-lg-3">
      <form class="p-3 d-flex">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-success" type="submit">Search</button>
     </form></div>
-    <div class="col-lg-1">
-      <a href=""><img src=".static/images/mainproject/add to cart.png" alt=""></a>
-  </div>
+    
 
   </div>
 
@@ -158,12 +157,27 @@
     </div>
 </div>
 
+<!-- ---------footer---------- -->
 
 </div>
 <br>
 <div class="text-center"><button type="see_all_btn button" class="btn btn-danger">see all</button></div>
+<br><br>
+<div class="footer_home bg-warning row" >
+<div class="ps-4 pt-5 col-lg-9">
+  <h3 class="fw-bold">Contact Us</h3>
+  <br>
+  <h5>Phone : +91 8844726526</h5>
+  <h5>Email : freshmart7@gmail.com</h5>
+  <h5>Location : panoor,thalassery,kerala</h5>
+</div>
+<div class="col-lg-3 pt-3" id="footer">
+  <img class="footer_logo" src="../static/images/logo2.png" alt="">
+
+</div>
 
 
+</div>
 
 
 
