--- a/signup/templates/sample/javascript2.html
+++ b/signup/templates/sample/javascript2.html
@@ -7,36 +7,220 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hi</h1>
+    
+  <button onclick="text()">find area of circle</button>
+
+
 
     <script>
+      function text(){
+        console.log('working')
+      }
+
+
+
         // alert('helloo')
         // confirm('are you sure?')
 
 
-       number1 =  parseInt(prompt('enter first number'))
-       console.log(number1)
+    //    number1 =  parseInt(prompt('enter first number'))
+    //    console.log(number1)
 
-       number2 = parseInt(prompt('enter second number'))
-       console.log(number2)
+    //    number2 = parseInt(prompt('enter second number'))
+    //    console.log(number2)
 
-       number3 = parseInt(prompt('enter third number'))
-       console.log(number3)
+    //    number3 = parseInt(prompt('enter third number'))
+    //    console.log(number3)
 
     //    sum = number1 + number2
     //    console.log(sum)
     //    alert(sum)
 
-    if (number1 > number2) {
-        console.log('the greastest number is', number1)
+    // if (number1 > number2) {
+    //     console.log('the greastest number is', number1)
 
-    }else if(number)
+    // }else if(number)
 
 
-    else{
-        console.log('the greastest number is', number2)
-    }
+    // else{
+    //     console.log('the greastest number is', number2)
+    // }
        
+    // a = 100
+    // b = 95
+    // c = 120
+
+    // if (a > b){
+        
+
+    // }else if(b>c){
+    //     console.log('b is greater')
+
+    // }else{
+    //     console.log('c is greater')
+
+    // }
+
+
+    // number = parseInt(prompt('enter a number'))
+    // if(number >= 90){
+    //     console.log('exelent')
+    // }
+
+
+    // day = prompt('enter a day')
+    // switch(day){
+    //     case 'monday':
+    //         console.log('today is monday')
+    //         break
+        
+    //     case 'tuesday':
+    //         console.log('today is tuesday')
+    //         break
+        
+    //     case 'wednesday':
+    //         console.log('today is wednesday')
+    //         break
+            
+    //     case 'thirsday':
+    //         console.log('today is thirsday')
+    //         break
+            
+    //     case 'friday':
+    //         console.log('today is friday')
+    //         break
+            
+    //     case 'saturday':
+    //         console.log('today is saturday')
+    //         break
+            
+    //     case 'sunday':
+    //         console.log('today is sunday')
+            
+    //     default:
+    //         console.log('invalid input')    
+    // }
+
+
+    //  ---- for loop ----
+
+    // for(i=1; i<=10; i++){
+    //     // document.write(i, '<br>')
+    //     console.log(i)
+    // }
+
+
+    // i%2
+//   ----- even numbers ------
+
+//    for (i=2; i<=20; i++){
+//      if(i%2 == 0){
+//         console.log(i);            
+
+//      }   
+//    }
+
+    //  ---- odd numbers ----
+
+//    for (i=1; i<=20; i++){
+//      if(i%2 == 1){
+//         console.log(i);            
+
+//     }   
+//     }
+
+
+// n = 5
+// for(i=1; i<=n; i++){
+//     for(j=0; j<i; j++){
+//         document.write('s ')
+//     } 
+//     document.write(' <br>  ')
+// }
+
+// for(i=0; i<7; i++){
+//    for(j=0; j<i; j++){
+//      document.write("*")                         //********
+
+//    }
+//    document.write("<br>")
+// }
+
+// let n = 5;
+// let string = "";
+// // External loop    
+// for (let i = 1; i <= n; i++) {
+//   // printing spaces
+//   for (let j = 1; j <= n - i; j++) {
+//     string += " ";
+//   }
+//   // printing star
+//   for (let k = 0; k < 2 * i - 1; k++) {
+//     string += "*";
+//   }
+//   string += "\n";
+// }
+// document.(string);
+
+
+// ---------function-----------
+
+// function total_sum(name,age){
+//   console.log('hello good morning', name)
+//   console.log('you are',age,'year old')
+// }
+// total_sum('shabeeb',22)
+// total_sum('rashi')
+
+
+// function sum(num1,num2){
+//   sum = num1 + num2
+//   console.log(sum)
+// }
+// sum(20,44)
+
+// function total_sum(num1,num2){
+//   sum = num1 + num2
+//   return sum
+// }
+// total_sum(20,44)
+// console.log(total_sum(30,66))
+// sum = total_sum(47,37)
+// console.log(sum)
+
+
+// function total_mark(m1, m2, m3, m4){
+//   marks = m1 + m2 + m3 + m4
+//   return
+
+// }
+// total_mark(45,42,36,35)
+
+
+// function average_mark(marks){
+//   average_mark = (marks/4)
+//   return average_mark
+// }
+// console.log(average_mark(45,42,36,35))
+
+
+function area_of_circle(radius){
+  circleRadius = 3.14 * radius * radius
+  return circleRadius
+}
+circle = area_of_circle(5)
+console.log(circle)
+
+// function area_of_rectangle(width, length){
+//   rectangleArea = width * length
+//   return rectangleArea
+// }
+// area_of_rectangle = area
+
+
+
+
+
 
     </script>
 </body>
