--- a/signup/templates/sample/sample.html
+++ b/signup/templates/sample/sample.html
@@ -12,6 +12,8 @@
 
 </head>
 
+<div class="myimage">hidjjn</div>
+
 <!-- <body class="bgsample">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
